--- a/product_manager/package.json
+++ b/product_manager/package.json
@@ -11,10 +11,13 @@
     "server": "json-server --watch data/db.json"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "json-server": "^0.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
